added black and rainbow selection

--- a/index.html
+++ b/index.html
@@ -10,21 +10,30 @@
 </head>
 
 <body>
-    <div class="flex">
-        <div>
-            <button id="btn-squares" class="mbt-4">how many?</button>
+    <div class="flex mt-4">
+        <div class="ml-5">
+            <div>
+                <button id="btn-squares" class="mt-4">how many?</button>
+            </div>
+            <div>
+                <button id="btn-restart" class="mt-4">Restart</button>
+            </div>
+            <div>
+                <button id="btn-black" class="mt-4">black</button>
+            </div>
+            <div>
+                <button id="btn-rainbow" class="mt-4">rainbow</button>
+            </div>
+            <!-- <div>
+                <input id="color-picker" type="color" class="mt-4">
+            </div> -->
         </div>
-        <div>
-            <input id="color-picker" class="mbt-4" type="color" name="base" value="#ffc600">
-        </div>
-        <div>
-            <button id="btn-restart" class="mbt-4">Restart Colors</button>
+        <div class="mr-5">
+            <div id="container">
+            </div>
         </div>
     </div>
-    <div id="container">
-    </div>
-
-    <script src="js.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
