added black,rainbow and colorpicker

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div>
                 <button id="btn-rainbow" class="mt-4">rainbow</button>
             </div>
-            <!-- <div>
+            <div>
                 <input id="color-picker" type="color" class="mt-4">
-            </div> -->
+            </div>
         </div>
         <div class="mr-5">
             <div id="container">
